# hyperledger-commerce-chain

./: .gitignore  README.md  docker-compose.yml
airflow/: .gitignore  Dockerfile  docker-compose.yml  docker-requirements.txt
auth-service/auth-service/: Cargo.toml  Dockerfile
auth-service/auth-service/scripts/: up.sql
auth-service/auth-service/src/: main.rs  models.rs  repository.rs
batch-generator/: .gitignore  generate_batch_data.mjs  generate_batch_data.py  package.json
citus/: docker-compose.yml
commerce-chain-frontend/: .dockerignore  Dockerfile  REQUEST_ITEM.md  (+9 more)
email-service/email-service/: Cargo.toml  Dockerfile
email-service/email-service/src/: kafka.rs  main.rs  notification_event.rs  sender.rs  template_structs.rs
email-service/email-service/templates/: insufficient_balance.html  logo.html  new_order_pending_approval.html  new_request_pending_approval.html  order_approved.html  order_cancelled.html  order_created.html  order_fulfilled.html  order_fulfillment_reminder_day1.html  order_fulfillment_reminder_day2.html  order_fulfillment_reminder_day3.html  order_rejected.html  payment_completed.html  request_approved.html  request_cancelled.html  request_created.html  request_fulfilled.html  request_fulfillment_reminder_day1.html  request_fulfillment_reminder_day2.html  request_fulfillment_reminder_day3.html  request_rejected.html
faker-generators/stream-generator/stream-generator/: Cargo.toml  Dockerfile  UserDeletedEvent.avro  package.json  userCreatedEvent.avro  users
faker-generators/stream-generator/stream-generator/src/: kafka.rs  main.rs
(+377 files in other folders)
