[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
argon2 = "0.5.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
tokio = "1.49.0"
validator = "0.20.0"
anyhow = "1.0.100"