[package]
name = "email-service"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = "0.38.0"
tokio = { version = "1", features = ["full"] }
schema_registry_converter = { version = "4.7.0", features = ["avro"] }
serde = { version = "1.0", features = ["derive"] }
apache-avro = "0.21.0"
lettre = { version = "0.11.19" }
askama = "0.12"
serde_json = "1.0"