[package]
name = "stream-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
apache-avro = "0.21.0"
rdkafka = "0.39.0"
schema_registry_converter = { version = "4.8.0", features = ["avro"] }
serde = "1.0.228"
tokio = { version = "1", features = ["full"] }
tokio-macros = "2.7.0"
serde_json = "1.0.149"
base64 = "0.22.1"
reqwest = "0.13.2"
rand = "0.9.4"
